Fix for Firefox breaking panel transitions when body overflow is also changed

--- a/app/_scss/about_panel.scss
+++ b/app/_scss/about_panel.scss
@@ -1,6 +1,7 @@
 @import 'colors';
 // Specific to the About panel.
 #about-panel {
+  left: 0;
   box-shadow: 2px 0 20px rgba(0, 0, 0, 0.25);
 
   .panel-content {
