--- a/app/_scss/more_panel.scss
+++ b/app/_scss/more_panel.scss
@@ -1,7 +1,7 @@
 @import 'colors';
 
 #more-panel {
-  right: 0;
+  right: 0px;
   box-shadow: -2px 0 20px rgba(0, 0, 0, 0.25);
 
   .panel-content {
